[package]
name = "feed_forward_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["blas"]}
blas-src = { version = "0.9.0", features = ["accelerate"] }
#blas = { version = "0.22.0", features = ["accelerate"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
colored = "2.0.0"
indicatif = "0.17.5"
